[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "depth_pcd_pro"
version = "0.1.0"
description = "Stereo & MiDaS depth to Open3D point clouds"
readme = "README.md"
requires-python = ">=3.9"
authors = [
  { name = "Dhamodar Burla", email = "damodar9062@gmail.com" },
]
dependencies = [
  "numpy>=1.24",
  "opencv-python>=4.8",
  "open3d>=0.18",
  "matplotlib>=3.7",
  "Pillow>=10.0",
  "torch>=2.1; platform_system!='Windows' or platform_machine!='arm64'"
]

[project.optional-dependencies]
dev = ["pytest>=8.0","flake8","black","isort","pre-commit"]
